Added post about Kotlin Syntax.

--- a/_posts/2017-10-30-01.kotlin.md
+++ b/_posts/2017-10-30-01.kotlin.md
@@ -25,8 +25,8 @@ Kotlin Github repository의 kotlin-koans 프로젝트를 기반으로 포스팅 
 - [코틀린 컬렉션 groupBy](#groupby)
 - [코틀린 컬렉션 partition](#partition)
 - [코틀린 컬렉션 fold](#fold)
-- [코틀린 컬렉션 2개이상의 함수를 연속으로 호출하기](compound)
-- [코틀린 표준라이브러리를 이용하여 Java코드를 Kotlin코드로 변경하기](conversion)
+- [코틀린 컬렉션 2개이상의 함수를 연속으로 호출하기](#compound)
+- [코틀린 표준라이브러리를 이용하여 Java코드를 Kotlin코드로 변경하기](#conversion)
 
 ### <a name=""><a/>예제용 Shop클래스 <sup>[목차 ⇈](#목차)</sup> 
 {% highlight java linenos %}
@@ -321,7 +321,7 @@ fun Shop.getCustomersSortedByNumberOfOrders(): List<Customer> {
 fun Customer.getTotalOrderPrice(): Double {
     // Return the sum of prices of all products that a customer has ordered.
     // Note: a customer may order the same product for several times.
-    // sumByDouble는 배열을 순회하며 선언된 속성값을 모두 합산하고 그 결과값을 반환합니다. 
+    // sumByDouble 함수는 배열을 순회하며 선언된 속성값을 모두 합산하고 그 결과값을 반환합니다. 
     return orders.flatMap { it.products }.sumByDouble { it.price }
 }
 {% endhighlight %}
@@ -340,46 +340,184 @@ fun Customer.getTotalOrderPrice(): Double {
 ### <a name="groupby"><a/>코틀린 컬렉션 groupBy <sup>[목차 ⇈](#목차)</sup> 
 <span style="color:blue;">src package</span>   
 {% highlight java linenos %}
+fun Shop.groupCustomersByCity(): Map<City, List<Customer>> {
+    // groupBy 함수는 배열 element의 키값(toString())을 기준으로 목록을 그룹화 하여 Map 객체를 반환합니다.
+    return customers.groupBy { it.city }
+}
 {% endhighlight %}
 
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
+@Test fun testGroupCustomersByCity() {
+    assertEquals(groupedByCities, shop.groupCustomersByCity())
+}
 {% endhighlight %}
 
 ### <a name="partition"><a/>코틀린 컬렉션 partition <sup>[목차 ⇈](#목차)</sup> 
 <span style="color:blue;">src package</span>   
 {% highlight java linenos %}
+fun Shop.getCustomersWithMoreUndeliveredOrdersThanDelivered(): Set<Customer> {
+    // Return customers who have more undelivered orders than delivered
+    return customers.filter {
+        // partition 함수는 주어진 조건을 기준으로 true값은 첫번째 목록에, false값은 두번쨰 목록에 반환합니다.
+        val (delivered, undelivered) = it.orders.partition { it.isDelivered }
+        undelivered.size > delivered.size
+    }.toSet()
+}
 {% endhighlight %}
 
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
+@Test fun testGetCustomersWhoHaveMoreUndeliveredOrdersThanDelivered() {
+    assertEquals(setOf(customers[reka]), shop.getCustomersWithMoreUndeliveredOrdersThanDelivered())
+}
 {% endhighlight %}
 
 ### <a name="fold"><a/>코틀린 컬렉션 fold <sup>[목차 ⇈](#목차)</sup> 
 <span style="color:blue;">src package</span>   
 {% highlight java linenos %}
+fun Shop.getSetOfProductsOrderedByEveryCustomer(): Set<Product> {
+    // Return the set of products ordered by every customer
+    return customers.fold(allOrderedProducts, {
+        orderedByAll, customer ->
+        orderedByAll.intersect(customer.orderedProducts)
+    })
+}
 {% endhighlight %}
 
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
+@Test fun testGetProductsOrderedByAllCustomers() {
+    val testShop = shop("test shop for 'fold'",
+            customer(lucas, Canberra,
+                    order(idea),
+                    order(webStorm)
+            ),
+            customer(reka, Budapest,
+                    order(idea),
+                    order(youTrack)
+            )
+    )
+    assertEquals(setOf(idea), testShop.getSetOfProductsOrderedByEveryCustomer())
+}
 {% endhighlight %}
 
 ### <a name="compound"><a/>코틀린 컬렉션 2개이상의 함수를 연속으로 호출하기 <sup>[목차 ⇈](#목차)</sup> 
 <span style="color:blue;">src package</span>   
 {% highlight java linenos %}
+fun Shop.getCustomersWhoOrderedProduct(product: Product): Set<Customer> {
+    // Return the set of customers who ordered the specified product
+    return customers.filter { it.orderedProducts.contains(product) }.toSet()
+}
+
+fun Customer.getMostExpensiveDeliveredProduct(): Product? {
+    // Return the most expensive product among all delivered products
+    // (use the Order.isDelivered flag)
+    return orders.filter { it.isDelivered }.flatMap { it.products }.maxBy { it.price }
+}
+
+fun Shop.getNumberOfTimesProductWasOrdered(product: Product): Int {
+    // Return the number of times the given product was ordered.
+    // Note: a customer may order the same product for several times.
+    return customers.flatMap { it.orders }.flatMap { it.products }.count {it == product}
+}
 {% endhighlight %}
 
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
+@Test fun testGetCustomersWhoOrderedProduct() {
+    assertEquals(setOf(customers[reka], customers[asuka]), shop.getCustomersWhoOrderedProduct(idea))
+}
+
+@Test fun testMostExpensiveDeliveredProduct() {
+    val testShop = shop("test shop for 'most expensive delivered product'",
+            customer(lucas, Canberra,
+                    order(isDelivered = false, products = idea),
+                    order(reSharper)
+            )
+    )
+    assertEquals(reSharper, testShop.customers[0].getMostExpensiveDeliveredProduct())
+}
+
+@Test fun testNumberOfTimesEachProductWasOrdered() {
+    assertEquals(4, shop.getNumberOfTimesProductWasOrdered(idea))
+}
+
+@Test fun testNumberOfTimesEachProductWasOrderedForRepeatedProduct() {
+    assertEquals("A customer may order a product for several times",
+            3, shop.getNumberOfTimesProductWasOrdered(reSharper))
+}
+
+@Test fun testNumberOfTimesEachProductWasOrderedForRepeatedInOrderProduct() {
+    assertEquals("An order may contain a particular product more than once",
+            3, shop.getNumberOfTimesProductWasOrdered(phpStorm))
+}
 {% endhighlight %}
 
 ### <a name="conversion"><a/>코틀린 표준라이브러리를 이용하여 Java코드를 Kotlin코드로 변경하기 <sup>[목차 ⇈](#목차)</sup> 
-<span style="color:blue;">src package</span>   
+<span style="color:blue;">src package(Java)</span>   
 {% highlight java linenos %}
+public Collection<String> doSomethingStrangeWithCollection(Collection<String> collection) {
+    Map<Integer, List<String>> groupsByLength = Maps.newHashMap();
+    for (String s : collection) {
+        List<String> strings = groupsByLength.get(s.length());
+        if (strings == null) {
+            strings = Lists.newArrayList();
+            groupsByLength.put(s.length(), strings);
+        }
+        strings.add(s);
+    }
+
+    int maximumSizeOfGroup = 0;
+    for (List<String> group : groupsByLength.values()) {
+        if (group.size() > maximumSizeOfGroup) {
+            maximumSizeOfGroup = group.size();
+        }
+    }
+
+    for (List<String> group : groupsByLength.values()) {
+        if (group.size() == maximumSizeOfGroup) {
+            return group;
+        }
+    }
+    return null;
+}
+{% endhighlight %}
+
+<span style="color:blue;">src package(Kotlin)</span>   
+{% highlight java linenos %}
+fun doSomethingStrangeWithCollection(collection: Collection<String>): Collection<String>? {
+    val groupsByLength = collection.groupBy { s -> s.length }
+
+    return groupsByLength.values.maxBy { group -> group.size }
+}
 {% endhighlight %}
 
 <span style="color:blue;">test package</span>   
 {% highlight java linenos %}
+@Test fun testCollectionOfOneElement() {
+    doTest(listOf("a"), listOf("a"))
+}
+
+@Test fun testEmptyCollection() {
+    doTest(null, listOf())
+}
+
+@Test fun testSimpleCollection() {
+    doTest(listOf("a", "c"), listOf("a", "bb", "c"))
+}
+
+@Test fun testCollectionWithEmptyStrings() {
+    doTest(listOf("", "", "", ""), listOf("", "", "", "", "a", "bb", "ccc", "dddd"))
+}
+
+@Test fun testCollectionWithTwoGroupsOfMaximalSize() {
+    doTest(listOf("a", "c"), listOf("a", "bb", "c", "dd"))
+}
+
+private fun doTest(expected: Collection<String>?, argument: Collection<String>) {
+    assertEquals("The function 'doSomethingStrangeWithCollection' should do at least something with a collection:", expected, doSomethingStrangeWithCollection(argument))
+}
 {% endhighlight %}
 
 
