Update index page

--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -50,12 +50,13 @@ category: post
  * Kotlin Coding Conventions(코딩규칙)
  * [Kotlin Control Flow(제어문)](/post/2017/08/29/01.kotlin/)
  * [Classes and Inheritance(클래스와 상속)](/post/2017/08/29/02.kotlin/)
- * [Kotlin Koans Workshop - I. introduction](/post/2017/10/24/01.kotlin/)
- * [Kotlin Koans Workshop - II. collections](/post/2017/10/30/01.kotlin/)
- * Kotlin Koans Workshop - III. conventions
- * [Kotlin Koans Workshop - IV. properties](/post/2017/10/27/01.kotlin/)
- * Kotlin Koans Workshop - V. builders
- * Kotlin Koans Workshop - VI. generics
+ * Kotlin Koans Workshop  
+   * [I. introduction](/post/2017/10/24/01.kotlin/)
+   * [II. collections](/post/2017/10/30/01.kotlin/)
+   * III. conventions
+   * [IV. properties](/post/2017/10/27/01.kotlin/)
+   * V. builders
+   * VI. generics
  
 ---
 <h1 class="table-contents">C++</h1>
