--- a/_posts/2017-11-27-01.easypassword.md
+++ b/_posts/2017-11-27-01.easypassword.md
@@ -27,7 +27,7 @@ category: app
 또한 패스워드 정보는 AES암호가 적용되어 있어 사용자가 설정한 잠금패턴 정보 없이는 해당정보를 복호화 할 수 없습니다.   
 <br />
 
-제공되는 모든 기능은 광고없이 무료로 이용 할 수 있습니다.
+제공되는 모든 기능은 광고없이 무료로 이용 할 수 있습니다.   
 <br />
 
 ## 주요기능 
@@ -52,7 +52,7 @@ category: app
 ## GitHub 
 개발자이신가요??   
 이지 패스워드는 오픈 소프 프로젝트입니다.   
-Folk도 하시고 프로젝트에 참여하고 싶으시면 Pull Request도 하세요.   
+Fork도 하시고 프로젝트에 참여하고 싶으시면 Pull Request도 하세요.   
 특히 번역 관련 Pull Request 환영입니다.   
 그냥 소스만 다운로드해 가셔도 되지만 기왕이면 별이라도 하나 찍어주고 가시면 덩 기덕 쿵덕♪~ ♬~ 입니다.   
 README는 아직 작성 중이니 참고하세요.   
